--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,6 +60,23 @@
             android:name=".SpyCam"
             android:label="@string/app_name">
         </activity>
+        <activity
+            android:name="com.cosercon.cosercon.AboutUs"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Dialog">
+            <intent-filter>
+                <action android:name="android.intent.action.ABOUT" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.cosercon.cosercon.Prefs"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.PREFS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
     </application>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
